--- a/src/main.scss
+++ b/src/main.scss
@@ -2,8 +2,9 @@ html {
   padding: 0;
   margin: 0;
   height: 100vh;
-  width: 100vw;
-  overflow: hidden;
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
   body {
     margin: 0;
     padding: 0;
