--- a/src/main.scss
+++ b/src/main.scss
@@ -5,6 +5,7 @@ html {
   width: 100%;
   overflow-x: hidden;
   overflow-y: auto;
+  font-family: 'system-ui', 'sans-serif';
   body {
     margin: 0;
     padding: 0;
